# OBI_ONLINE_JUDGE

./: .env  .gitignore  README.md  app.py  pyproject.toml  tabela.csv  teste.py
static/: obi_problems.json
templates/: base.html  index.html  problem.html  problems.html
web/: index.html  script.js
webScrap/: extract_obi_pdf.py  obiscrap.py
